src/objects/agf__ADM_Color__c.object
<CustomObject>
    <fields>
        <fullName>agf__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Colors</relationshipLabel>
        <relationshipName>Colors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Color</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>